SFUSA/force-app/main/default/objects/CS_Country_Setting__mdt/fields/isGTR__c.field-meta.xml
<CustomField>
        <fullName>isGTR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGTR</label>
        <type>Checkbox</type>
    </CustomField>