SFUSA/force-app/main/default/objects/CS_Country_Setting__mdt/listViews/All_Details.listView-meta.xml
<ListView>
        <fullName>All_Details</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Business_Hours__c</columns>
        <columns>Country__c</columns>
        <columns>isGTR__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <language>en_US</language>
    </ListView>